Optimize the first paint

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="preconnect" href="%REACT_APP_URL_BASE%">
     <link rel="shortcut icon" href="%PUBLIC_URL%/engine.ico">
 		<link rel="stylesheet" href="%PUBLIC_URL%/mystyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
