--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,26 @@
 
 <html lang="en">
   <head>
+    <style>
+      .se-pre-con {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        z-index: 9999;
+        background: url("images/Preloader_2.gif") center no-repeat #fff;
+      }
+
+      .btn-dark:not(:disabled):not(.disabled).active, .btn-dark:not(:disabled):not(.disabled):active, .show>.btn-dark.dropdown-toggle {
+          border-color: #808080;
+          border-style: solid;
+      }
+    </style>
     <meta charset="utf-8">
     <link rel="preconnect" href="%REACT_APP_URL_BASE%">
     <link rel="shortcut icon" href="%PUBLIC_URL%/engine.ico">
-		<link rel="stylesheet" href="%PUBLIC_URL%/mystyle.css">
+		<link rel="stylesheet" href="%PUBLIC_URL%/mystyle.css" >
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
