--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <meta charset="utf-8">
     <link rel="preconnect" href="%REACT_APP_URL_BASE%">
     <link rel="shortcut icon" href="%PUBLIC_URL%/engine.ico">
-		<link rel="stylesheet" href="%PUBLIC_URL%/mystyle.css" >
+		<link rel="stylesheet" href="%PUBLIC_URL%/mystyle.css" async >
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
