File modified after renaming a configuration variable

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       }
     </style>
     <meta charset="utf-8">
-    <link rel="preconnect" href="%REACT_APP_URL_BASE%">
+    <link rel="preconnect" href="%REACT_APP_API_URL_BASE%">
     <link rel="shortcut icon" href="%PUBLIC_URL%/images/engine48.png">
 		<link rel="stylesheet" href="%PUBLIC_URL%/mystyle.css" async >
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
