--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,16 @@
 
 <html lang="en">
   <head>
-      <meta name="Description" content="Allow an owner to manage all the maintenance task of his or her equipments. This software was originaly created to manage the maintenance task of a diesel engine installed on a sailboat. Because there are others equipments on a sailboats that has to be maintain to be reliable, this web app extend its usage for all kind of equipment.">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K8W24MB3E9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K8W24MB3E9');
+    </script>
+    <meta name="Description" content="Allow an owner to manage all the maintenance task of his or her equipments. This software was originaly created to manage the maintenance task of a diesel engine installed on a sailboat. Because there are others equipments on a sailboats that has to be maintain to be reliable, this web app extend its usage for all kind of equipment.">
     <style>
       .se-pre-con {
         position: absolute;
